# forweb

./: .gitignore  01receive.cpp  01send_oob.cpp  CMakeLists.txt  README.md  compile_commands.json  log.yml
info/: IOManager_.md
server/: .main.cpp.swp  CMakeLists.txt  Session.vim  log.txt  main.cpp  test17.cpp  test20.cpp
server/.cache/clangd/index/: log.cpp.4F2576658EF385CD.idx  log.h.665F3C24B81D8F37.idx  main.cpp.5B8CD98647C7C964.idx
server/PyModule/: setup.py  test1.c  test1.h  test1.pyx
server/ThirdModule/lib/pkgconfig/: yaml-cpp.pc
server/dev/: CMakeLists.txt  async.h  iomanager.h
server/ecoroutine/: CMakeLists.txt
server/ecoroutine/inc/: ecoroutine.h
server/ecoroutine/src/: ecoroutine.cpp
server/ethread/: CMakeLists.txt
server/ethread/inc/: .ethread.h.swp  ethread.h
server/ethread/src/: .ethread.cpp.swp  ethread.cpp
server/fiber/: CMakeLists.txt
server/fiber/inc/: .scheduler.h.swp  fiber.h  fiber_.h  fiber_cpp17.h  fiber_cpp20.h  fiberfunc_cpp20.h  iomanager.h  iomanager_.h  iomanager_cpp17.h  iomanager_cpp20.h  scheduler.h  scheduler_.h  scheduler_cpp17.h  scheduler_cpp20.h  shared_vars.h
server/fiber/src/: .scheduler.cpp.swp  async.cpp  fiber.cpp  fiber_.cpp  fiber_cpp17.cpp  fiber_cpp20.cpp  fiberfunc_cpp20.cpp  iomanager.cpp  iomanager_.cpp  iomanager_cpp17.cpp  iomanager_cpp20.cpp  scheduler.cpp  scheduler_.cpp  scheduler_cpp17.cpp  scheduler_cpp20.cpp
server/http/: CMakeLists.txt
server/http/inc/: http.h
server/http/src/: http.cpp
server/log/: CMakeLists.txt
server/log/inc/: log.h
server/log/src/: log.cpp
server/socket/: CMakeLists.txt
server/socket/inc/: address.h  concept.h  socket.h  socketfunc_cpp20.h
server/socket/src/: address.cpp  socket.cpp
server/util/: CMakeLists.txt
server/util/inc/: .timer.h.swp  enums.h  hook.h  macro.h  range.h  singleton.h  threadsafe_deque.h  timer.h  util.h
server/util/src/: hook.cpp  range.cpp  timer.cpp  util.cpp
(+142 files in other folders)
